docker/demos/ingress-nginx/ingress.yaml
# https://mritd.me/2017/03/04/how-to-use-nginx-ingress/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: static-server-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - openhello.com
      secretName: openhello-com
  rules:
    - host: openhello.com
      http:
        paths:
          - path: /
            backend:
              serviceName: static-server
              servicePort: 80
